- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    6.2, 6.3
 - 
    None
 
- 
        
 - 
        742344a665 (qt/qtmultimedia/dev) 8713f2e78d (qt/qtmultimedia/6.3) 8713f2e78d (qt/tqtc-qtmultimedia/6.3) 742344a665 (qt/tqtc-qtmultimedia/dev) 7c05be8d49 (qt/tqtc-qtmultimedia/6.2)
 - 
        2022wk16FOAndroid&Automotive
 
On Android, the audio subsystem was not prepared for a SampleFormat::Float, since the android NDK did not use that sample format.
Now FFmpeg backend will also use the audio subsystem in Android and it does use SampleFormat::Float so the QOpenSLESEngine needed to be updated.
- resulted from
 - 
                    
        
        QTBUG-102232
        Android FFmpeg: Integrate audio subsystem for playback
    
-         
 - Closed
 
 -