Android: Fix qopenslengine audioFormat conversion

This patch fixes the conversion audio format into SLFormat on
qopenslengine. Previously the conversion did not take into account the
sample format. To take it into account the SLDataFormat_PCM had to
be changed to SLAndroidDataFormat_PCM_EX.

Pick-to: 6.3 6.2
Fixes: QTBUG-102962
Change-Id: I3699ee0cc939c46ad9ce8eae35c555ea9e8fc59f
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>